Bugfix: reinstate <li> list icons
Broken in 50c48a9ad60dbada45d8750752ef4120967afc0a

--- a/assets/sass/_type.scss
+++ b/assets/sass/_type.scss
@@ -39,7 +39,7 @@ blockquote {
   border-left: #{$color-blue-gray} 2px solid;
 }
 
-#content {
+.content {
   a {
     border-bottom: #{$color-orange} 1px solid;
   }
